--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,36 +6,35 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
-    type: trojan
-    server: 23.227.38.11
-    port: 443
-    udp: true
-    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
-    sni: syndication-statutes-wanted-logo.trycloudflare.com
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /argox-tr
-  - &id002
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: yh1.dtku41.xyz
-    port: 8080
+    server: qin06.rong1104.uk
+    port: 2053
     cipher: auto
-    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
+    uuid: 2e21a9a0-6bc7-4b24-a434-484ac36733ab
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
-      headers:
-        host: uh-lawyers-instruments-kernel.trycloudflare.com
+      path: /qin06
+  - &id002
+    name: 🇺🇸_US_美国->🇲🇾_MY_马来西亚
+    type: vmess
+    server: dq02.tenlynet.uk
+    port: 2053
+    cipher: auto
+    uuid: d714b81f-0909-4fff-e022-5c5dff67c21a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dq02
   - &id003
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: 172.67.152.170
+    server: 104.21.82.39
     port: 2052
     cipher: auto
     uuid: 7a737f41-b792-4260-94ff-3d864da67b80
@@ -50,36 +49,6 @@ proxies:
   - &id004
     name: 🇺🇸_US_美国_3
     type: vmess
-    server: 104.21.82.39
-    port: 2052
-    cipher: auto
-    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mahilu.site
-  - &id005
-    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
-    type: vmess
-    server: 94.140.0.110
-    port: 8880
-    cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: food.zhaal.ir
-  - &id006
-    name: 🇺🇸_US_美国_4
-    type: vmess
     server: mahilu.site
     port: 2052
     cipher: auto
@@ -92,7 +61,7 @@ proxies:
       path: /
       headers:
         host: mahilu.site
-  - &id007
+  - &id005
     name: 🇱🇺_LU_卢森堡_1
     type: vmess
     server: 78.111.102.232
@@ -103,30 +72,8 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id008
-    name: 🇱🇺_LU_卢森堡_2
-    type: vmess
-    server: 45.82.31.164
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id009
-    name: 🇨🇦_CA_加拿大_1
-    type: vmess
-    server: 134.122.41.160
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id010
-    name: 🇺🇸_US_美国_5
+  - &id006
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: 172.67.116.48
     port: 80
@@ -140,8 +87,8 @@ proxies:
       path: /
       headers:
         host: wap.hostmjj.com
-  - &id011
-    name: 🇺🇸_US_美国_6
+  - &id007
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: 172.67.49.214
     port: 80
@@ -155,38 +102,67 @@ proxies:
       path: /
       headers:
         host: wap.hostmjj.com
-  - &id012
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
+  - &id008
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: 23.227.39.24
-    port: 8080
+    server: 172.67.152.170
+    port: 2052
     cipher: auto
-    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
+    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
+      path: /
       headers:
-        host: per-essex-patterns-bowling.trycloudflare.com
-  - &id013
-    name: 🇨🇦_CA_加拿大_2
+        host: mahilu.site
+  - &id009
+    name: 🇱🇺_LU_卢森堡_2
     type: vmess
-    server: 23.227.38.22
-    port: 8080
+    server: 45.82.31.164
+    port: 3389
     cipher: auto
-    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id010
+    name: 🇦🇪_AE_阿联酋->🇫🇷_FR_法国
+    type: vmess
+    server: 94.140.0.110
+    port: 8880
+    cipher: auto
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
+      path: /
       headers:
-        host: per-essex-patterns-bowling.trycloudflare.com
-  - &id014
+        host: food.zhaal.ir
+  - &id011
     name: 🇺🇸_US_美国_7
+    type: ss
+    server: 52.12.160.73
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 134.122.41.160
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id013
+    name: 🇺🇸_US_美国_8
     type: vmess
     server: 162.159.130.208
     port: 8080
@@ -200,158 +176,18 @@ proxies:
       path: 55021a7c-bd6c-418e-be95-ceac8ba27b45-vm
       headers:
         host: widescreen-instruction-breakdown-postage.trycloudflare.com
+  - &id014
+    name: 🇬🇮_GI_直布罗陀
+    type: trojan
+    server: 95.164.68.116
+    port: 2053
+    udp: true
+    password: f37a931d-7092-48fe-b82f-a98da3040eb2
+    sni: ftp.debian.org
+    skip-cert-verify: true
+    network: tcp
   - &id015
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-    type: vmess
-    server: fbi.gov
-    port: 8080
-    cipher: auto
-    uuid: ef8c954e-014f-4b36-8273-9b5086afab34
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: ef8c954e-014f-4b36-8273-9b5086afab34-vm
-      headers:
-        host: bibliographic-sword-sequence-advertisers.trycloudflare.com
-  - &id016
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_3
-    type: vmess
-    server: 23.227.38.23
-    port: 8080
-    cipher: auto
-    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
-      headers:
-        host: uh-lawyers-instruments-kernel.trycloudflare.com
-  - &id017
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 162.159.5.6
-    port: 8080
-    cipher: auto
-    uuid: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
-      headers:
-        host: pcs-referenced-camera-concerns.trycloudflare.com
-  - &id018
     name: 🇺🇸_US_美国_9
-    type: vmess
-    server: yh2.freeh1.xyz
-    port: 8080
-    cipher: auto
-    uuid: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
-      headers:
-        host: pcs-referenced-camera-concerns.trycloudflare.com
-  - &id019
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: 172.67.130.140
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id020
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 104.21.8.157
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id021
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: mizban.arzonhost.ir
-    port: 2086
-    cipher: auto
-    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mizban.arzonhost.ir
-  - &id022
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: russia.com
-    port: 2095
-    cipher: auto
-    uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id023
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-    type: vmess
-    server: 162.159.1.33
-    port: 8080
-    cipher: auto
-    uuid: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
-      headers:
-        host: pcs-referenced-camera-concerns.trycloudflare.com
-  - &id024
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
-    type: vmess
-    server: yh3.freeh1.xyz
-    port: 8080
-    cipher: auto
-    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
-      headers:
-        host: larger-marketing-amounts-skin.trycloudflare.com
-  - &id025
-    name: 🇺🇸_US_美国_12
     type: vmess
     server: yh2.dtku41.xyz
     port: 8080
@@ -365,6 +201,280 @@ proxies:
       path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
       headers:
         host: per-essex-patterns-bowling.trycloudflare.com
+  - &id016
+    name: 🇺🇸_US_美国_10
+    type: ss
+    server: 95.164.19.233
+    port: 17038
+    password: q06CbkhVXx7XVv0D
+    cipher: aes-256-gcm
+  - &id017
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
+    type: vmess
+    server: 23.227.39.24
+    port: 8080
+    cipher: auto
+    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
+      headers:
+        host: per-essex-patterns-bowling.trycloudflare.com
+  - &id018
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
+    type: vmess
+    server: 23.227.38.23
+    port: 8080
+    cipher: auto
+    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
+      headers:
+        host: uh-lawyers-instruments-kernel.trycloudflare.com
+  - &id019
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 162.159.137.249
+    port: 8080
+    cipher: auto
+    uuid: 028c8131-9e3e-4836-94ac-ea7f24d4d05a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
+      headers:
+        host: nest-emily-healing-h.trycloudflare.com
+  - &id020
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: us01.appleid.bf
+    port: 2086
+    cipher: auto
+    uuid: cdccacb4-8335-4824-8d60-005a755f798a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ws?ed=2048
+      headers:
+        host: us01.appleid.bf
+  - &id021
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 174.136.207.168
+    port: 2086
+    cipher: auto
+    uuid: 86cbaf29-6a7a-4cd0-ba64-195543b014bc
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ray
+  - &id022
+    name: 🇺🇸_US_美国_14
+    type: ss
+    server: 38.75.137.93
+    port: 8091
+    password: PCnnH6SQSnfoS27
+    cipher: aes-256-gcm
+  - &id023
+    name: 🇺🇸_US_美国_15
+    type: ss
+    server: 38.75.137.93
+    port: 8008
+    password: XKFKl2rULjIp74
+    cipher: aes-256-gcm
+  - &id024
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id025
+    name: 🇺🇸_US_美国_16
+    type: ss
+    server: 38.75.137.93
+    port: 8090
+    password: PCnnH6SQSnfoS27
+    cipher: aes-256-gcm
+  - &id026
+    name: 🇺🇸_US_美国_17
+    type: ss
+    server: 38.75.137.93
+    port: 2376
+    password: faBAoD54k87UJG7
+    cipher: aes-256-gcm
+  - &id027
+    name: 🇺🇸_US_美国_18
+    type: ss
+    server: 38.75.137.42
+    port: 8881
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id028
+    name: 🇺🇸_US_美国_19
+    type: vmess
+    server: 172.67.130.140
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id029
+    name: 🇺🇸_US_美国_20
+    type: vmess
+    server: 205.234.252.215
+    port: 40583
+    cipher: auto
+    uuid: 9c4bb4a0-2bd0-40ff-d0dd-24749a20c1bf
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id030
+    name: 🇺🇸_US_美国_21
+    type: vmess
+    server: 174.136.205.46
+    port: 39027
+    cipher: auto
+    uuid: 26419143-8a06-43ab-d58c-bea7b7da8203
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id031
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_3
+    type: trojan
+    server: 23.227.38.11
+    port: 443
+    udp: true
+    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
+    sni: syndication-statutes-wanted-logo.trycloudflare.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argox-tr
+  - &id032
+    name: 🇺🇸_US_美国_22
+    type: ss
+    server: 54.187.81.197
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id033
+    name: 🇺🇸_US_美国_23
+    type: ss
+    server: 54.213.221.39
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id034
+    name: 🇺🇸_US_美国_24
+    type: ss
+    server: 18.246.240.239
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id035
+    name: 🇺🇸_US_美国_25
+    type: ss
+    server: 54.190.1.40
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id036
+    name: 🇺🇸_US_美国_26
+    type: ss
+    server: 34.219.76.253
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id037
+    name: 🇺🇸_US_美国_27
+    type: vmess
+    server: yh1.dtku41.xyz
+    port: 8080
+    cipher: auto
+    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
+      headers:
+        host: uh-lawyers-instruments-kernel.trycloudflare.com
+  - &id038
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: de01.appleid.bf
+    port: 2086
+    cipher: auto
+    uuid: cdccacb4-8335-4824-8d60-005a755f798a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ws?ed=2048
+      headers:
+        host: de01.appleid.bf
+  - &id039
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    type: vmess
+    server: 104.21.8.157
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id040
+    name: 🇺🇸_US_美国_28
+    type: vmess
+    server: yhnsb3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 56278a1a-c7cc-459f-b00c-3037e4f99590
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: yhnsb3.shabijichang.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -416,6 +526,21 @@ proxy-groups:
       - *id023
       - *id024
       - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
+      - *id040
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -446,6 +571,21 @@ proxy-groups:
       - *id023
       - *id024
       - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
+      - *id040
   - name: SELECT
     type: select
     proxies:
@@ -474,6 +614,21 @@ proxy-groups:
       - *id023
       - *id024
       - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
+      - *id040
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
